fix main container width on mobile

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1074,6 +1074,10 @@ button {
   }
 }
 @media screen and (max-width: 570px) {
+  .container {
+    width: 90%;
+  }
+
   .navbar {
     height: 130px;
   }
