--- a/src/sass/queries/queries.sass
+++ b/src/sass/queries/queries.sass
@@ -72,6 +72,9 @@
         grid-template-columns: 1fr        
 
 @media screen and (max-width: 570px)
+    .container
+        width: 90%
+
     .navbar 
         height: 130px
 
